<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#C6E216"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/prevBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_arrow_back_ios_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hancom_sans_semibold"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/prevBtn"
            android:layout_marginLeft="5sp"
            android:layout_marginBottom="15sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/netExt_settingTxt"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">
        <LinearLayout
            android:id="@+id/deviceList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/regit"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/hancom_sans_semibold"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:text="@string/netExt"/>

                <EditText
                    android:id="@+id/ext_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="172.xxx.xxx.xxx"
                    android:inputType="text"/>
            </LinearLayout>

            <android.widget.Button
                android:id="@+id/loadIpBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/widget1"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="16dp"
                android:text="@string/netExt_loadtxt"/>
            <android.widget.Button
                android:id="@+id/regitExtIpBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/widget1"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="16dp"
                android:text="@string/netExt_RegitTxt"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>