<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/b1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/widget4"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_window"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/popup_circulationTxt1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/b2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/widget4"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_fan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/popup_circulationTxt2"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/b3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/widget4"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_fan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/popup_circulationTxt3"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/b4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/widget4"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_search_24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/popup_circulationTxt4"/>
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>
