
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#C6E216"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/prevBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hancom_sans_semibold"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/prevBtn"
            android:layout_marginLeft="5sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="24dp"
            android:text="@string/book_index02b" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:id="@+id/homeBoard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/widget6"
                android:layout_margin="4dp"
                android:padding="10dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/mfb1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:id="@+id/m1"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/icon_shelves"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@+id/m1"
                        android:fontFamily="@font/hancom_sans_semibold"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:text="@string/book_index02b"/>
                    <ImageView
                        android:id="@+id/mfI1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"/>
                </RelativeLayout>

                <androidx.gridlayout.widget.GridLayout
                    android:id="@+id/menuboard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    app:alignmentMode="alignMargins"
                    app:rowCount="2"
                    app:columnCount="4">
                    <LinearLayout
                        android:id="@+id/b1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_roundtea"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_greentea"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_wheattea"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta3"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_coffee"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta4"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_plum"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta5"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_lemontea"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta6"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_soda_drink"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta7"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_spkring"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta8"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_hotchoko"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta9"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_barley"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta10"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_citrontea"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta11"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/b12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:layout_columnWeight="1"
                        android:padding="10dp"
                        android:gravity="center"
                        android:background="@drawable/widget4"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/icon_icemaker"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="@string/book_index02a_Ta12"/>
                    </LinearLayout>
                </androidx.gridlayout.widget.GridLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

